everything before debugging monotone copy

--- a/race-detector/Makefile
+++ b/race-detector/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS = -c
+CFLAGS = -c -Wall -fpic
 
 OBJECTS = treeclock_ndt.o treeclock_ptr.o vectorclock.o
 OBJ_HB 	= detector_hb.o
@@ -9,19 +9,19 @@ all: hb
 
 hb: $(OBJECTS) $(OBJ_HB)
 	rm -rf Engine_hb.so output
-	$(CC) $(OBJECTS) $(OBJ_HB) -shared -o Engine_hb.so
+	$(CC) $(OBJECTS) $(OBJ_HB) -shared -o libEngine_hb.so
 	mkdir output
 	mv *.o output
 
 ft: $(OBJECTS) $(OBJ_FT)
 	rm -rf Engine_ft.so output
-	$(CC) $(OBJECTS) $(OBJ_FT) -shared -o Engine_ft.so
+	$(CC) $(OBJECTS) $(OBJ_FT) -shared -o libEngine_ft.so
 	mkdir output
 	mv *.o output
 
 %.o: detector/%.c
-	$(CC) $(CFLAGS) $< 
+	$(CC) $(CFLAGS) $<
 
 .PONY: clean
 clean:
-	rm -rf Engine_ft.so Engine_hb.so output
+	rm -rf libEngine_ft.so libEngine_hb.so output
